--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,22 @@ body {
 main {
     min-height: 100%;
 }
-
+.overx-hidden{
+    overflow-x: hidden;
+}
+.overy-hidden{
+    overflow-y: hidden;
+}
+.over-hidden{
+    overflow: hidden;
+}
 header {
     width: 100%;
     height: 60vh;
     background: linear-gradient(to top, hsla(0, 0%, 0%, 0.7), rgba(0, 0, 0, 0.4)), url("/assets/img/header.jpg");
     background-size: cover;
     background-position: top center;
+}
+.card-footer.row{
+    gap: 10px;
 }
